--- a/app/views/golfcourses/search.html.erb
+++ b/app/views/golfcourses/search.html.erb
@@ -1,27 +1,28 @@
 <h1>ラウンドするゴルフ場を選択</h1>
-<%= select_month(Date.today) %>
 
-
-<p>検索</p>
-<%= form_for (model: @score, local: true) do |f|  do %>
 	<%= form_tag(golfcourses_search_path,:method => 'get', local: true) do %>
+		<%= label :search, "ゴルフ場名を検索" %>
 		<%= text_field_tag :search %>
 		<%= submit_tag 'Search', :golfcoursename => nil %>
 	<% end %>
 
+<%= form_with url:round_start_path do |f| %>
+
+	<%= f.label :played_date, "ラウンドする日" %>
+	<%= f.date_select :played_date, require: true, use_month_numbers: true %><br>
+
+	<%= f.label :published, "このラウンドのスコアの公開/非公開" %>
+	<%= f.select :published, [['公開', 1], ['非公開', 0]] %>
 
 	<% @search_golfcoursename.each do |name| %><br>
-		<%= check_box_tag :golfcoursename %>
-		<%= label_tag :golfcoursename, name.golfcoursename %><br>
+		<%= f.radio_button :golfcourse_id, name.id %>
+		<%= name.golfcoursename %><br>
+		<%= name.id %><br>
 		<%= name.address %><br>
 		<%= name.golfcoursecaption %><br>
 	<% end %>
+	<%= paginate @search_golfcoursename %>
+
+	<%= submit_tag 'ラウンドを開始する' %>
+
 <% end %>
-<%= paginate @search_golfcoursename %>
-
-
-
-<%# @golfcoursename_all.each do |n| %>
-	<%#= n.golfcoursename %><br>
-<%# end %>
-<%#= paginate @golfcoursename_all %>
