--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,7 +8,7 @@
     <%= link_to "ログイン", new_user_session_path, class: 'post' %><br />
     <%= link_to "サインアップ", new_user_registration_path, class: 'post' %><br />
     <%= link_to 'ゲストログイン', users_guest_sign_in_path, method: :post %><br />
-    <%= link_to "ゴルフ場検索", golfcourses_search_path %>
+    <%= link_to "ラウンドする", golfcourses_search_path %>
   <% end %>
 </div>
 
@@ -18,13 +18,13 @@
   <%= link_to "過去のスコアを見る", archives_index_path %><br />
   <%= link_to "プレイヤー検索", user_index_path %><br />
   <%= link_to "マイページ", mypage_path %><br />
-  <%= link_to "ゴルフ場検索", golfcourses_search_path %><br />
+  <%= link_to "ラウンドする", golfcourses_search_path %><br />
 
 <% elsif user_signed_in? && current_user.name == "ゲストプレイヤー" %>
   <%#= link_to "ラウンドする", select_course_path %><br />
   <%= link_to "掲示板を覗く", messages_index_path %><br />
   <%= link_to "プレイヤー検索", user_index_path %><br />
-  <%= link_to "ゴルフ場検索", golfcourses_search_path %><br />
+  <%= link_to "ラウンドする", golfcourses_search_path %><br />
 
 <% else %>
 
