--- a/app/views/golfcourses/play.html.erb
+++ b/app/views/golfcourses/play.html.erb
@@ -15,10 +15,46 @@
 
 <h1>リーダーボード</h1>
 
-<% @current_course_scores.each do|score| %>
-  <%= score.total_score%>
-  <%= score.user.name%>プロ<br>
-<% end %>
+<table>
+  <tr>
+    <th>rank</th>
+    <th>name</th>
+    <th>score</th>
+    <th>THRU</th>
+  </tr>
+  <% s = 0 %>
+  <% j = 1 %>
+  <% @current_course_scores.each.with_index(1) do|score,i| %>
+    <tr>
+      <% if i == 1 %>
+        <% s = score.total_score %>
+      <% end %>
+      <% if score.total_score != s %>
+        <% j = i %>
+        <th><%= j %></th>
+        <th><%= score.user.name %></th>
+        <th><%= score.total_score %></th>
+        <% s = score.total_score %>
+      <% else %>
+        <% s = score.total_score %>
+        <th><%= j %></th>
+        <th><%= score.user.name %></th>
+        <th><%= score.total_score %></th>
+      <% end %>
+    </tr>
+  <% end %>
+</table>
+
+
+<%# if score.overunder == @ou[i - 1].overunder || score.overunder == @ou[(i + 1)%@ou.size].overunder %> 
+  <%# post_fix = "T" %>
+<%# else %>
+  <%# post_fix = "" %>
+<%# end %>
+
+<%# order = i + 1 unless score.overunder == @ou[i - 1].overunder %>
+
+
 
 
 <h1><%= @score.golfcourse.golfcoursename %>のメッセージボード</h1>
