--- a/app/views/messages/create.js.erb
+++ b/app/views/messages/create.js.erb
@@ -1,3 +1,4 @@
-
 document.getElementById('messages').insertAdjacentHTML('beforeend', '<%= j(render @message) %>')
+console.log("メッセージ更新したよ")
 document.getElementById('message_content').value = ''
+console.log("フォームをカラにしたよ")
