--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -30,15 +30,23 @@
 <time>今日は<%= @day %>です</time><br>
 
 
-<%# if user_signed_in? && current_user.name != "ゲストプレイヤー" %>
-  <%# <h2>プレイ中のラウンド</h2> %>
-  <%# @unfinshed_score.each do|score| %>
-    <%#= score.played_date%>
-    <%#= link_to score.golfcourse.golfcoursename, golfcourse_play_path(id: score.id)%>
-    <%#= score.total_score%><br>
-  <%# end %>
-<%# elsif user_signed_in? && current_user.name == "ゲストプレイヤー" %>
-  <%# <span>ゲストログインだから、何も表示しないよ</span> %>
-<%# else %>
-  <%# <span>ログアウト中だから、何も表示しないよ</span>   %>
-<%# end %>
+<% if user_signed_in? && current_user.name != "ゲストプレイヤー" %>
+  <h2>あなたは、サインイン中でゲストプレイヤーでもないですね。</h2>
+  <% if @unfinshed_score.nil? %>
+    <h2>プレイ中のラウンドはありません。</h2>
+  <% else %>
+    <h2>プレイ中のラウンド</h2>
+    <% @unfinshed_score.each do|score| %>
+      <%= score.played_date%>
+      <%= link_to score.golfcourse.golfcoursename, golfcourse_play_path(id: score.id)%>
+      <%= score.total_score%><br>
+    <% end %>
+  <% end %>
+<% elsif user_signed_in? && current_user.name == "ゲストプレイヤー" %>
+  <h2>あなたは、サインイン中でゲストプレイヤーですね。</h2>
+  <%# <h2>ゲストログインだから、何も表示しないよ</h2> %>
+<% else %>
+  <h2>ログアウト中ですね</h2>  
+<% end %>
+
+<%= session.to_hash %>
