--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -1,19 +1,15 @@
 <h1>投稿詳細ページ</h1>
-<h3><%= @message.user.name %>さんの投稿</h3>
-<h3><%= @message.content %></h3>
-<h3>いいね件数: <%= @message.likes.count %></h3>
-<% if current_user.already_liked?(@message) %>
+<h2><%= @message.user.name %>さんの投稿</h2>
+<p><%= @message.content %></p>
+<h2>いいね件数: <%= @message.likes.count %></h2>
 
-  <%= button_to 'いいねを取り消す', {controller: 'likes', action: 'destroy'}, {method: :delete } %>
-  
-<% else %>
-<form action="/likes" method="post">
-<%= link_to 'いいね', likes_path(@post) %>
-</form>
-<% end %>
+
 <h2>いいねしたユーザー</h2>
 <% @message.liked_users.each do |user| %>
-  <li><%= user.name %></li>
+  <li>
+  <%= user.name %><br>
+  <%= user.introduction %><br>
+  </li>
 <% end %>
 
 <%= link_to "ホームへ戻る", root_path %>
