--- a/app/views/messages/create.js.erb
+++ b/app/views/messages/create.js.erb
@@ -1,4 +1,8 @@
-document.getElementById('messages').insertAdjacentHTML('afterbegin', '<p id="<% @message.id %>"><span><%= @message.content %></span><span><%= @message.user.name %></span></p>')
+document.getElementById('messages')
+.insertAdjacentHTML
+('afterbegin', '<p id="<% @message.id %>"><span><%= @message.content %></span><span><%= @message.user.name %></span><span><%= @message.created_at %></span></p>');
+
+
 console.log("メッセージ更新したよ")
 document.getElementById('message_content').value = ''
 console.log("フォームをカラにしたよ")
