--- a/app/views/golfcourses/_form.html.erb
+++ b/app/views/golfcourses/_form.html.erb
@@ -1,5 +1,5 @@
-<%= form_with model: @score do |f| %>
-  <%= f.label :hole1_score, '1Hスコア' %>
-  <%= f.number_field :hole1_score %>
-  <%= f.submit "編集する" %>
-<% end %>
+<%#= form_with model: @score do |f| %>
+  <%#= f.label :hole1_score, '1Hスコア' %>
+  <%#= f.number_field :hole1_score %>
+  <%#= f.submit "編集する" %>
+<%# end %>
