--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -30,6 +30,7 @@
 <time>今日は<%= @day %>です</time><br>
 
 
+
 <% if user_signed_in? && current_user.name != "ゲストプレイヤー" %>
   <h2>あなたは、サインイン中でゲストプレイヤーでもないですね。</h2>
   <% if @unfinshed_score.nil? %>
@@ -38,7 +39,7 @@
     <h2>プレイ中のラウンド</h2>
     <% @unfinshed_score.each do|score| %>
       <%= score.played_date%>
-      <%= link_to score.golfcourse.golfcoursename, golfcourse_play_path(id: score.id)%>
+      <%= link_to score.golfcourse.golfcoursename, score_path(id: score.id)%>
       <%= score.total_score%><br>
     <% end %>
   <% end %>
