--- a/app/views/scores/show.html.erb
+++ b/app/views/scores/show.html.erb
@@ -6,217 +6,9 @@
 <p>Total score:
   <span id='total_score'><%= @score.total_score %></span>  
 </p>
-<table>
-  <tr>
-    <th>ホール</th>
-    <th>スコア</th>
-    <th>フォーム</th>
-
-  </tr>
-  <tr>
-    <td>1H</td>
-    <td id="1H-score">
-    <% if @score.hole1_score == nil %>
-      <span>未プレイ</span>
-      <% else %>
-        <%= format('%+d',@score.hole1_score.to_i) %>
-      <% end %>
-    </td>
-    <td>
-      <%= form_with model: @score do|f| %>
-        <%#= f.label :hole1_score, '1Hスコア' %>
-        <%= f.number_field :hole1_score, value: @score.hole1_score %>
-        <%= f.submit "入力" %>
-      <% end %>
-    </td>
-  </tr>
-  <tr>
-    <td>2H</td>
-    <td>
-    <% if @score.hole2_score == nil %>
-      <span>未プレイ</span>
-      <% else %>
-        <%= format('%+d', @score.hole2_score.to_i) %>
-      <% end %>
-    </td>
-  </tr>
-  <tr>
-    <td>3H</td>
-    <td>
-    <% if @score.hole3_score == nil %>
-      <span>未プレイ</span>
-      <% else %>
-        <%= format('%+d', @score.hole3_score.to_i) %>
-      <% end %>
-    </td>
-  </tr>
-  <tr>
-    <td>4H</td>
-    <td>
-    <% if @score.hole4_score == nil %>
-      <span>未プレイ</span>
-      <% else %>
-        <%= format('%+d', @score.hole4_score.to_i) %>
-      <% end %>
-    </td>
-  </tr>
-  <tr>
-    <td>5H</td>
-    <td>
-    <% if @score.hole5_score == nil %>
-      <span>未プレイ</span>
-      <% else %>
-        <%= format('%+d', @score.hole5_score.to_i) %>
-      <% end %>
-    </td>
-  </tr>
-  <tr>
-    <td>6H</td>
-    <td>
-    <% if @score.hole6_score == nil %>
-      <span>未プレイ</span>
-      <% else %>
-        <%= format('%+d', @score.hole6_score.to_i) %>
-      <% end %>
-    </td>
-  </tr>
-  <tr>
-    <td>7H</td>
-    <td>
-    <% if @score.hole7_score == nil %>
-      <span>未プレイ</span>
-      <% else %>
-        <%= format('%+d', @score.hole7_score.to_i) %>
-      <% end %>
-    </td>
-  </tr>
-  <tr>
-    <td>8H</td>
-    <td>
-    <% if @score.hole8_score == nil %>
-      <span>未プレイ</span>
-      <% else %>
-        <%= format('%+d', @score.hole8_score.to_i) %>
-      <% end %>
-    </td>
-  </tr>
-  <tr>
-    <td>9H</td>
-    <td>
-    <% if @score.hole9_score == nil %>
-      <span>未プレイ</span>
-      <% else %>
-        <%= format('%+d', @score.hole9_score.to_i) %>
-      <% end %>
-    </td>
-  </tr>
-  <tr>
-    <td>10H</td>
-    <td>
-    <% if @score.hole10_score == nil %>
-      <span>未プレイ</span>
-      <% else %>
-        <%= format('%+d', @score.hole10_score.to_i) %>
-      <% end %>
-    </td>
-  </tr>
-  <tr>
-    <td>11H</td>
-    <td>
-    <% if @score.hole11_score == nil %>
-      <span>未プレイ</span>
-      <% else %>
-        <%= format('%+d', @score.hole11_score.to_i) %>
-      <% end %>
-    </td>
-  </tr>
-  <tr>
-    <td>12H</td>
-    <td>
-    <% if @score.hole12_score == nil %>
-      <span>未プレイ</span>
-      <% else %>
-        <%= format('%+d', @score.hole12_score.to_i) %>
-      <% end %>
-    </td>
-  </tr>
-    <tr>
-    <td>13H</td>
-    <td>
-    <% if @score.hole13_score == nil %>
-      <span>未プレイ</span>
-      <% else %>
-        <%= format('%+d', @score.hole13_score.to_i) %>
-      <% end %>
-    </td>
-  </tr>
-  <tr>
-    <td>14H</td>
-    <td>
-    <% if @score.hole14_score == nil %>
-      <span>未プレイ</span>
-      <% else %>
-        <%= format('%+d', @score.hole14_score.to_i) %>
-      <% end %>
-    </td>
-  </tr>
-  <tr>
-    <td>15H</td>
-    <td>
-    <% if @score.hole15_score == nil %>
-      <span>未プレイ</span>
-      <% else %>
-        <%= format('%+d', @score.hole15_score.to_i) %>
-      <% end %>
-    </td>
-  </tr>
-  <tr>
-    <td>16H</td>
-    <td>
-    <% if @score.hole16_score == nil %>
-      <span>未プレイ</span>
-      <% else %>
-        <%= format('%+d', @score.hole16_score.to_i) %>
-      <% end %>
-    </td>
-  </tr>
-  <tr>
-    <td>17H</td>
-    <td>
-    <% if @score.hole17_score == nil %>
-      <span>未プレイ</span>
-      <% else %>
-        <%= format('%+d', @score.hole17_score.to_i) %>
-      <% end %>
-    </td>
-  </tr>
-  <tr>
-    <td>18H</td>
-    <td>
-    <% if @score.hole18_score == nil %>
-      <span>未プレイ</span>
-      <% else %>
-        <%= format('%+d', @score.hole18_score.to_i) %>
-      <% end %>
-    </td>  
-  </tr>
-
-</table>
-
-
-<%# <table>
-  <tr>
-    <th>rank</th>
-    <th>name</th>
-    <th>score</th>
-    <th>THRU</th>
-    <th>start_hole</th>
-  </tr> %>
-
+<%= render 'score_card' %>
 
 <%= render "/golfcourses/form" %>
-<%#= render 'messages/form', message: Message.new, value: '投稿' %>
-
 
 <% if @score.hole1_score == nil %>
   <%= link_to "このラウンドを終了する", golfcourses_finish_path, method: :update, data: { confirm: 'ラウンドを終了してよろしいですか？' }  %>
@@ -228,6 +20,9 @@
 <hr>
 
 <h1><%= @score.golfcourse.golfcoursename %>のメッセージボード</h1>
+<p>
+<%= link_to "スコア入力に戻る", plays_edit_path(score_id: @score.id, hole_number: @score.thru.to_i + 1)%>
+</p>
 
 <%= render 'messages/form', message: Message.new, value: '投稿' %>
 
