--- a/app/views/archives/show.html.erb
+++ b/app/views/archives/show.html.erb
@@ -116,9 +116,9 @@
 
 <span><%= link_to "ラウンド一覧に戻る", archives_index_path %> </span><br>
 <% if @score.published == 1 %>
-  <span><%= link_to "このラウンドのスコアを非公開にする", archives_score_unpublished_path(score_id: params[:id]), method: :post, data: { confirm: 'このラウンドの結果を非公開にしてよろしいですか？' }  %> </span><br>
+  <span><%= link_to "このラウンドのスコアを非公開にする", unpublished_path(score_id: params[:id]), method: :patch, data: { confirm: 'このラウンドの結果を非公開にしてよろしいですか？' }  %> </span><br>
 <% elsif @score.published == 0 %>
-  <span><%= link_to "このラウンドのスコアを公開する", archives_score_published_path(score_id: params[:id]), method: :post, data: { confirm: 'このラウンドの結果を公開してよろしいですか？' } %> </span><br>
+  <span><%= link_to "このラウンドのスコアを公開する", published_path(id: params[:id]), method: :patch, data: { confirm: 'このラウンドの結果を公開してよろしいですか？' } %> </span><br>
 <% end %>
 
 
