--- a/app/views/likes/destroy.js.erb
+++ b/app/views/likes/destroy.js.erb
@@ -6,14 +6,14 @@ count.id = "unlike-" + "<%= params[:message_id] %>";
 
 
 
-document.getElementById("change-unlike-" + "<%= params[:message_id] %>").innerText = "いいねする";
+document.getElementById("change-unlike-" + "<%= params[:message_id] %>").innerText = "♡";
 var change_button = document.getElementById("change-unlike-" + "<%= params[:message_id] %>");
 change_button.id = "change-like-" + "<%= params[:message_id] %>";
 change_button.setAttribute('data-method', 'post');
 change_button.setAttribute('href', '/likes?message_id=' + '<%= params[:message_id] %>' + '&score_id=' + '<%= params[:score_id] %>'  + '&user_id=' + '<%= params[:user_id] %>' );
 
-document.getElementById("heart-" + "<%= params[:message_id] %>").innerText = "♡";
-document.getElementById("heart-" + "<%= params[:message_id] %>").id = "notheart-" + "<%= params[:message_id] %>"
+// document.getElementById("heart-" + "<%#= params[:message_id] %>").innerText = "♡";
+// document.getElementById("heart-" + "<%#= params[:message_id] %>").id = "notheart-" + "<%#= params[:message_id] %>"
 
 console.log("<%= params[:message_id] %>")
 console.log("<%= params[:user_id] %>")
