--- a/app/views/messages/create.js.erb
+++ b/app/views/messages/create.js.erb
@@ -1,6 +1,6 @@
 document.getElementById('messages')
 .insertAdjacentHTML('afterbegin',
- '<p id="<% @message.id %>"><span><%= @message.content %></span><span><%= @message.user.name %></span><span><%= @message.created_at %></span></p>');
+ '<p id="message-<%= @message.id %>"><span><%= @message.content %></span><span><%= @message.user.name %></span><span><%= @message.created_at %></span> <a id="unlike-<%= @message.id %>" href ="/messages/<%= params[:score_id] %>?message_id=<%= @message.id %>">0</a><a id="change-like-<%= @message.id %>" data-remote="true" rel="nofollow" data-method="post" href="/likes?message_id=<%= @message.id %>&score_id=<%= params[:score_id] %>&user_id=<%= current_user.id %>">♡</a></p>');
 
 
 console.log("メッセージ更新したよ")
