--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -15,7 +15,7 @@
 <% if user_signed_in? && current_user.name != "ゲストプレイヤー" %>
   <%#= link_to "ラウンドする", select_course_path %><br />
   <%= link_to "掲示板を覗く", messages_index_path %><br />
-  <%= link_to "過去のスコアを見る", archives_index_path %><br />
+  <%= link_to "過去のスコアを見る", archives_index_path, played_year: '0', commit: '検索' %><br />
   <%= link_to "プレイヤー検索", user_index_path %><br />
   <%= link_to "マイページ", mypage_path %><br />
   <%= link_to "ラウンドする", golfcourses_search_path %><br />
