--- a/app/views/archives/index.html.erb
+++ b/app/views/archives/index.html.erb
@@ -20,14 +20,22 @@
   <% end %>
   <p>ラウンド数：<%= @count = @scores_search.count.to_i %></p>
   <% @ave = @sum.to_f / @count.to_f %>
-  <p>平均スコア：<%= sprintf("+%.2f", @ave) %></p>
-  
-  <% @array = [] %>
-  <% @scores_search.each do|score| %>
-    <% @array.push(score.total_score.to_i) %>
+  <% if @count == 0 %>
+    <h5>該当するデータがありません。</h5>
+  <% else %>
+    <p>平均スコア：<%= sprintf("+%.2f", @ave) %></p>
   <% end %>
-  <p>ベストスコア：<%= format('%+d', @array.min) %></p>
-  <p>ワーストスコア：<%= format('%+d', @array.max) %></p>
+
+  <% @array = [] %>
+  <% if @array == [] %>
+  <% else %>
+    <% @scores_search.each do|score| %>
+      <% @array.push(score.total_score.to_i) %>
+    <% end %>
+    <p>ベストスコア：<%= format('%+d', @array.min) %></p>
+    <p>ワーストスコア：<%= format('%+d', @array.max) %></p>
+  <% end %>
+
 
     <% @played_course_count.each do|score| %>
     <%= score[0] %>
