--- a/app/views/home/_playing_round.html.erb
+++ b/app/views/home/_playing_round.html.erb
@@ -1,6 +1,7 @@
 <% if user_signed_in? && current_user.name != "ゲストプレイヤー" %>
-  <h2>あなたは、サインイン中でゲストプレイヤーでもないですね。</h2>
-    <h2>プレイ中のラウンド</h2>
+  <% puts 'あなたは、サインイン中でゲストプレイヤーでもないです。' %>
+
+  <h2>プレイ中のラウンド</h2>
   <% if @unfinished_score == [] %>
     <p>プレイ中のラウンドはありません。</p>
   <% else %>
@@ -16,6 +17,7 @@
           <td><%= score.played_date%></td>
           <td><%= link_to score.golfcourse.golfcoursename, score_path(id: score.id)%></td>
           <% if score.thru == nil%>
+            <td><span>-</span></td>
             <td><span>スタート前</span></td>
           <% else %>
             <td><%= score.total_score%></td>
@@ -30,8 +32,7 @@
     </table>
   <% end %>
 <% elsif user_signed_in? && current_user.name == "ゲストプレイヤー" %>
-  <h2>あなたは、サインイン中でゲストプレイヤーですね。</h2>
-  <%# <h2>ゲストログインだから、何も表示しないよ</h2> %>
+  <% puts 'あなたは、ログイン中でゲストプレイヤーですね。' %>
 <% else %>
-  <h2>ログアウト中ですね</h2>  
+  <% puts 'ログアウト中です。' %>
 <% end %>
