--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <header>
   <p class="red text-primary">ここからヘッダー</p>
   <%= link_to "トップにもどる", root_path %>
-  <p>ここまでヘッダー</p>
+  <p class="blue">ここまでヘッダー</p>
 </header>
