--- a/app/views/archives/index.html.erb
+++ b/app/views/archives/index.html.erb
@@ -1,4 +1,4 @@
-<h1>過去のスコアを解析</h1>
+<h1>過去のスコアをみれます。</h1>
 <div>
   <h2>完了したラウンド</h2>
 
@@ -23,7 +23,7 @@
   <% if @count == 0 %>
     <h5>該当するデータがありません。</h5>
   <% else %>
-    <p>平均スコア：<%= sprintf("%+8.2f", @ave) %></p>
+    <p>平均スコア：<%= sprintf("+%.2f", @ave) %></p>
   <% end %>
 
   <% @array = [] %>
