--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,5 +1,5 @@
-<h1>掲示板</h1>
-<p>コースごとの口コミや情報が見られます。</p>
+<h1>コースごとの掲示板を覗けます</h1>
+
 <div>
   <% @every_course.zip(@golfcoursename) do |id,name| %>
     <span><%= link_to name.golfcoursename, messages_index_course_path(golfcourse_id: id) %> </span><br>
