--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -13,6 +13,9 @@
 
 <%= render 'top_menu'%>
 
+
+<time>今日は<%= @day %>です</time><br>
+
 <%= render 'playing_round'%>
 
 <h2>フォローしているプレイヤーのラウンド情報(直近1週間)</h2>  
